v0.07.11 - add some minor text in backend, fix too large gap at the top of dialog material card title

--- a/invKeepFrontend/src/app/components/ratio-details-dialog/ratio-details-dialog.component.scss
+++ b/invKeepFrontend/src/app/components/ratio-details-dialog/ratio-details-dialog.component.scss
@@ -15,7 +15,10 @@ mat-card-title.dialog-body-content{
     padding-top: 15px !important;
     padding-bottom: 10px !important;
 }
-
+mat-card-title.short-description-title{
+    padding-top: 0px !important;
+}
+    
 mat-card-content.dialog-body-content{
     padding-bottom: 10px !important;
 }
